lab_5/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-service
spec:
  selector:
    app: clickhouse
  ports:
    - port: 9000
      targetPort: 9000
